# ai_camera

./: .gitignore  AGENTS.md  AI_HANDOFF.md  CLAUDE.md  README.md  pyproject.toml  requirement.txt
ai_photo_pose.egg-info/: SOURCES.txt  requires.txt
app/: __init__.py  main.py  schemas.py
app/core/: config.py  database.py
app/features/: __init__.py  skeleton_features.py
app/legacy/: __init__.py  schemas.py
app/legacy/pose_library/: __init__.py  loader.py
app/legacy/recommender/: embedding_based.py  embedding_index.py  rule_based.py  text_encoder.py
app/models/: __init__.py  image.py  pose.py  pose_keypoint.py
app/pose_library/: __init__.py  loader.py  poses.json  updater.py
app/recommender/: __init__.py  embedding_based.py  embedding_index.py  rule_based.py  text_encoder.py
app/repositories/: image_repository.py  pose_repository.py
app/services/: image_analysis_service.py  pose_library_service.py
app/vision/: __init__.py  image_loader.py  image_utils.py  pose_estimator.py  scene_classifier.py
app/visualization/: __init__.py  pose_card.py  pose_renderer.py
docs/: AI_HANDOFF.md  ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SCHEMAS.md
scripts/: ingest_pose_image.py  smoke_test_embedding.py  test_scene_classifier.py
tests/: test_analyze_image.py  test_api.py  test_database_services.py  test_embedding_recommender.py  test_pose_library.py  test_pose_library_updater.py  test_pose_visualization.py  test_recommender.py  test_skeleton_features.py
