[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-photo-pose"
version = "0.1.0"
description = "MVP backend for AI photography pose recommendations"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
