[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-camera"
version = "0.1.0"
description = "MVP backend for image upload, pose landmarks, and scene classification"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "mediapipe>=0.10",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
